2002-12-29   Maurice LeBrun <mlebrun@users.sourceforge.net>

	* bindings/tk: added sample app-defaults files, howto on their
	  use, and code to suck the app-defaults file "PLplot" into the
	  options db, which is then used to set geometry, fonts, colors,
	  etc.

2002-12-29  Alan W. Irwin <airwin@users.sourceforge.net>

	* Implement additional 2-d arrays for the swig-based Java API. These
	  new typemaps allow plcont (and x09.java) to work.  Note, only the
	  2-d version is implemented, there is no angle wrap code, and kx,
	  lx, ky, ly always have to be in the argument list.  In other words
	  this is the raw java interface to PLplot.  Thus, a number of
	  adjustments had to be made to x09.java to work with this raw
	  interface.  However, once the user-friendly interface is done, it
	  should be possible to overload 1-d arrays when needed for xg0
	  through yg1, have angle wrap code, and also drop kx, lx, ky, ly.

	* Implement typemaps for defined_func and fill_func which allow
	  x15.java and x16.java to work properly.  Note, I removed the
	  local versions of plshades from x16.java since plshades is now
	  defined in the PLplot java interface API.  

2002-12-28  Alan W. Irwin <airwin@users.sourceforge.net>

	* Implement the simpler 2-d arrays for the swig-based Java API.  This
	  means all examples work other than x09 (contours), x15 (shade plots
	  with plshade), and x16 (shade plots with plshades).

2002-12-27  Alan W. Irwin <airwin@users.sourceforge.net>

	* Implement new swig-based Java API.  Two-dimensional arrays are
	  not implemented yet which means 6 of the examples do not work,
	  but the rest do work, and in fact example 18 works completely
	  for the first time ever because all PLplot functions in the common
	  API that have variable or one-dimensional array arguments have been 
	  completely implemented in Java.

2002-12-24  Maurice LeBrun <mlebrun@users.sourceforge.net>

	* examples/tcl/x??: Added script file front-ends to Tcl example