@@ -848,8 +848,6 @@ PLINT
 plSetOpt(char *opt, char *optarg);
 #endif
 
-//temporary
-#if 0
 PLINT
 plParseOpts(PLINT *p_argc, char **argv, PLINT mode);
 
@@ -857,8 +855,6 @@ plParseOpts(PLINT *p_argc, char **argv, PLINT mode);
 
 void
 plOptUsage(void);
-//temporary
-#endif
 
 	/* Miscellaneous */
 #if 0
