@@ -33,7 +33,7 @@ class x02 {
 
     // Parse and process command line arguments.
 
-//        pls.plParseOpts( args, pls.PL_PARSE_FULL );
+        pls.plParseOpts( args, pls.PL_PARSE_FULL | pls.PL_PARSE_NOPROGRAM );
 
     // Initialize plplot.
 
