@@ -66,7 +66,7 @@ class x09 {
 	
     // Parse and process command line arguments.
 
-//        pls.plParseOpts( args, pls.PL_PARSE_FULL );
+        pls.plParseOpts( args, pls.PL_PARSE_FULL | pls.PL_PARSE_NOPROGRAM );
     /* Initialize plplot */
        
 	pls.plinit();
