@@ -31,7 +31,7 @@ class x13 {
         double[] x = new double[ 500 ];
 	double[] y = new double[ 500 ];
 	
-//        pls.plParseOpts( args, pls.PL_PARSE_FULL );
+        pls.plParseOpts( args, pls.PL_PARSE_FULL | pls.PL_PARSE_NOPROGRAM );
 
         pls.plinit();
 	
