@@ -102,7 +102,7 @@ class x18 {
 	double r;
 
         // Parse and process command line arguments.
-//	pls.plParseOpts( args, pls.PL_PARSE_FULL );
+	pls.plParseOpts( args, pls.PL_PARSE_FULL | pls.PL_PARSE_NOPROGRAM );
 
 	// Initialize plplot.
 	pls.plinit();
